# PublishServerDemo

./: README.md
npl-publish/: .gitignore  Jzip.sh  auto.sh  build_basic.bat  build_launcher.bat  build_sdk.bat  build_unity.bat  compile.sh  config.sh  package.sh  publish.html  publish.sh  release.sh  upload.sh  version
npl-publish/npl-platform/: ignoreWord.txt  npl-reg.cmd  npl.ini  npl_alpha.ini  npl_check.ini  npl_dev.ini  npl_eu.ini  npl_online.ini  npl_pre.ini  npl_qa.ini  sensitiveWord.txt
npl-publish/npl-platform/apps/: appmanifest_1000.acf  appmanifest_1001.acf
npl-publish/tools/: csigntool.cmd  symstore.cmd  tool.bat
npl-publish/tools/conf/: credentials.properties
npl-publish/tools/uploadfile/: zip用法.txt
npl-publish/tutorials_demo/: CMakeLists.txt
remote/: remotepub.sh
remotesig/: remotesig.sh  signLists.txt
server_src/publish/: main.go  publish.html
server_src/remote_sig/: main.go
src/download/: main.go
src/publish/: main.go  publish.html
src/signature/: main.go
